# housely

./: .commitlintrc.json  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
.husky/: pre-commit
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/app/: config.py  database.py  main.py
apps/api/app/models/: __init__.py  amenity.py  hex_score.py  school_ranking.py
apps/api/app/routers/: amenities.py  heatmap.py  schools.py  score.py  search.py
apps/api/app/schemas/: amenity.py  school.py  score.py  search.py
apps/api/app/services/: geocoder.py  school_service.py  scoring_service.py
apps/web/: Dockerfile  package.json  pnpm-lock.yaml  tailwind.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/compare/: CompareView.tsx
apps/web/src/components/filters/: CategoryToggles.tsx  WeightSliders.tsx
apps/web/src/components/map/: MapView.tsx
apps/web/src/components/schools/: SchoolRankingItem.tsx  SchoolsPanel.tsx
apps/web/src/components/scoring/: ScorePanel.tsx  ScoreRadarChart.tsx
apps/web/src/hooks/: useSchoolRankings.ts
apps/web/src/lib/: api.ts
apps/web/src/types/: index.ts
infrastructure/: docker-compose.prod.yml  docker-compose.yml
infrastructure/martin/: config.yaml
infrastructure/nginx/: nginx.conf  nginx.prod.conf
infrastructure/postgres/: init.sql
pipelines/osm/: import_osm.sh  osm_style.lua
pipelines/schools/: seed_rankings.sql
pipelines/scoring/: precompute_scores.py
(+2 files in other folders)
